--- a/main/style.css
+++ b/main/style.css
@@ -1,10 +1,10 @@
 @font-face {
     font-family: 'PT sans 400';
-    src: url('../../fonts/ptsans-400.woff2');
+    src: url('../fonts/ptsans-400.woff2');
 }
 @font-face {
     font-family: 'PT sans 700';
-    src: url('../../fonts/ptsans-700.woff2');
+    src: url('../fonts/ptsans-700.woff2');
 }
 h1, h2, h3, h4 {
     font-family: 'PT Sans 700', sans-serif;
