--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -1,5 +1,5 @@
 
-/* here ara header, footer */
+/* here ara header, footer, subscribe section */
 
 /* header */
 @font-face {
@@ -128,8 +128,62 @@ body {
     background: #E5E5E5;
 }
 
+/* subscribe section */
+
+.subscribe {
+    width: 684px;
+    height: 214.86px;
+    margin: 0 auto;
+}
+.subscribe h2 {
+    text-transform: uppercase;
+    text-align: center;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    color:#FFFFFF;
+}
+
+.subscribe p {
+    color:#FFFFFF;
+    text-align: center;
+    font-weight: 400;
+    font-size: 22px;
+    line-height: 26px;
+    margin-bottom: 54px;
+}
+
+.subscribe-form {
+    display: flex;
+
+}
+
+.email-subscribe {
+    background-color: #F2F2F2;
+    border-radius: 4px 0 0 4px;
+    width: 452px;
+    height: 50px;
+    border: none;
+}
+
+.button-subscribe {
+    background-color: #82B3D3;
+    border-radius: 0 4px 4px 0;
+    border: #82B3D3;
+    width: 232px;
+    height: 52px;
+    align-items: center;
+    text-align: center;
+    text-transform: uppercase;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 36px;
+    color:#FFFFFF;
+}
+
 /* footer */
 .footer {
+    background-color: #FFFFFF;
     display: flex;
     width: 1060px;
     height: 50px;
