--- a/styles/main.css
+++ b/styles/main.css
@@ -54,3 +54,27 @@
     flex-wrap: wrap;
     list-style: none;
 }
+
+.hotel-search {
+    text-align: center;
+}
+
+.hotel-search h2 {
+    text-transform: uppercase;
+}
+
+.hotel-search a {
+    text-decoration: none;
+    color: #FFFFFF;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 36px;
+    background-color: #756157;
+    padding: 8px 50px;
+    border-radius: 4px;
+}
+
+.subscribe {
+    background-image: url("../img/images/main-subscribe.jpg");
+    padding: 96px 258px 104px;
+}
