--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -13,7 +13,7 @@
 .filter h1 {
     font-weight: 700;
     font-size: 60px;
-    line-height: 78px;
+    line-height: 1.3em;
 }
 
 .form {
@@ -37,7 +37,7 @@
     text-transform: uppercase;
     font-weight: 700;
     font-size: 30px;
-    line-height: 36px;
+    line-height: 1.2em;
 }
 
 .layout-list, .hotels-list, .pagination {
