--- a/styles/main.css
+++ b/styles/main.css
@@ -34,7 +34,7 @@
     padding: 0;
     font-weight: 700;
     font-size: 30px;
-    line-height: 36px;
+    line-height: 2em;
     text-transform: uppercase;
     margin-bottom: 25px;
 }
@@ -68,7 +68,7 @@
     color: #FFFFFF;
     font-weight: 700;
     font-size: 20px;
-    line-height: 36px;
+    line-height: 2em;
     background-color: #756157;
     padding: 8px 50px;
     border-radius: 4px;
