feat: add styles in main.css, catalog.css and common-style.css

--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -64,3 +64,17 @@
     color: #000;
     background-color: #F2F2F2;
 }
+
+.subscribe {
+    width: 1200px;
+    height: 414.86px;
+    background-color: #FFFFFF;
+}
+
+.subscribe-h2 {
+    color:#000;
+}
+
+.subscribe p {
+    color: #333;
+}
