--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -2,6 +2,10 @@
     box-sizing: border-box;
 }
 
+html {
+    height: 100%;
+}
+
 /* here ara header, footer, subscribe section */
 
 /* header */
@@ -26,6 +30,8 @@
 }
 
 body {
+    margin: 0 auto;
+    min-height: 100%;
     font-family: 'PT Sans', sans-serif;
     font-weight: 400;
     font-size: 22px;
@@ -33,7 +39,14 @@ body {
     color: #333333;
     background-color: #F2F2F2;
     width: 1200px;
-    margin: 0 auto;
+}
+
+.main {
+    flex-grow: 1;
+}
+
+.page-container{
+    background-color: #FFFFFF;
 }
 
 .all-navigation {
@@ -42,7 +55,6 @@ body {
     width: 1200px;
     height: 65px;
     padding: 0 70px;
-    background-color: #FFFFFF;
 }
 
 .navigation, .nav-buttons {
@@ -179,9 +191,6 @@ body {
 }
 
 /* footer */
-.footer {
-    background-color: #FFFFFF;
-}
 .social-list {
     display: flex;
     list-style: none;
