--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -62,6 +62,7 @@
 }
 
 .filter-form-name {
+    margin: 0;
     font-style: normal;
     font-weight: 700;
     font-size: 20px;
@@ -237,9 +238,11 @@ select {
     padding: 0;
 }
 
-.pagination-item {
+.pagination-link {
+    display: block;
     width: 60px;
     height: 60px;
+    padding: 12px 0;
     background-color: #82B3D3;
     border-radius: 4px;
     text-align: center;
@@ -248,6 +251,17 @@ select {
     font-size: 20px;
     line-height: 36px;
     margin-right: 8px;
+    cursor: pointer;
+}
+
+.pagination-link:hover:not(.pagination-current, .pagination-etc),
+.pagination-link:focus:not(.pagination-current, .pagination-etc) {
+    background-color: #68A2CA;
+}
+
+.pagination-link:active:not(.pagination-current, .pagination-etc) {
+    background-color: #82B3D3;
+    color: #FFFFFF4D;
 }
 
 .pagination-item:last-child {
@@ -257,12 +271,18 @@ select {
 .pagination-link {
     text-decoration: none;
     color: #FFFFFF;
-    background-color: #82B3D3;
 }
 
 .pagination-current {
-    color: #000;
     background-color: #F2F2F2;
+}
+
+.pagination-current, .pagination-etc{
+    color: #000;
+}
+
+.pagination-etc {
+    background-color: #FFFFFF;
 }
 
 .subscribe {
