feat: add buttons in catalog.css

--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -23,19 +23,20 @@
     margin-bottom: 8px;
 }
 
-.filter-home-page, .filter-hotel-link {
+.filter-home-page,
+.filter-hotel-link {
     text-decoration: none;
 }
 
 .filter-hotel-link {
-    color:#FFFFFF;
+    color: #FFFFFF;
     font-weight: 400;
     font-size: 16px;
     line-height: 21px;
 }
 
 .filter-hotel-link:hover {
-    color:#FFFFFF99;
+    color: #FFFFFF99;
 }
 
 .filter-hotel-link:active {
@@ -96,10 +97,7 @@ legend {
     margin-right: 70px;
 }
 
-input[type="checkbox"] {
-    margin: 0;
-}
-
+input[type="checkbox"],
 input[type="radio"] {
     margin: 0;
 }
@@ -112,7 +110,8 @@ input[type="radio"] {
     display: block;
 }
 
-.apply, .reset {
+.apply,
+.reset {
     background: none;
     border: none;
     cursor: pointer;
@@ -179,7 +178,9 @@ select {
     cursor: pointer;
 }
 
-.layout-list, .hotels-list, .pagination {
+.layout-list,
+.hotels-list,
+.pagination {
     display: flex;
     list-style: none;
 }
@@ -200,7 +201,9 @@ select {
     border-radius: 4px;
 }
 
-.current-layout, .layout:hover, .layout:active {
+.current-layout,
+.layout:hover,
+.layout:active {
     border-color: #000000;
 }
 
@@ -224,7 +227,120 @@ select {
 
 .hotel-item a {
     text-decoration: none;
+}
+
+.hotel-item img {
+    margin-bottom: 16px;
+}
+
+.hotel-item-h3 {
+    margin: 0;
+    margin-bottom: 16px;
     color: #000;
+    font-style: normal;
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 28px;
+}
+
+.name-and-price {
+    display: flex;
+    justify-content: space-between;
+    margin: 0;
+    margin-bottom: 16px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #333333;
+}
+
+.button-more,
+.button-favorite,
+.button-favorite-choose {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    border-radius: 4px;
+}
+
+.button-more {
+    padding: 8px 26px;
+    background-color: #756157;
+}
+
+.button-more:hover,
+.button-more:focus {
+    background-color: #615048;
+}
+
+.button-more:active {
+    background: #756157;
+    color: #FFFFFF4D;
+}
+
+.button-favorite {
+    border: none;
+    padding: 8px 15px;
+    background-color: #82B3D3;
+}
+
+.button-favorite:hover,
+.button-favorite:focus {
+    background-color: #68A2CA;
+}
+
+.button-favorite:active {
+    background-color: #82B3D3;
+    color: #FFFFFF4D;
+}
+
+.button-favorite-choose {
+    border: none;
+    padding: 8px 14px;
+    background-color: #7DB54F;
+}
+
+.button-favorite-choose:hover,
+.button-favorite-choose:focus {
+    background-color: #6C9E42;
+}
+
+.button-favorite-choose:active {
+    background-color: #7DB54F;
+    color: #FFFFFF4D;
+}
+
+.more-and-like {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 16px;
+}
+
+.stars-and-rank {
+    display: flex;
+    justify-content: space-between;
+}
+
+.stars-and-rank p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    text-transform: uppercase;
+    color: #333333;
+    background: #F2F2F2;
+    border-radius: 4px;
+    padding: 9px 22px 8px;
+    margin: 0;
+}
+
+.stars-and-rank img {
+    margin: 0;
+
 }
 
 .light-line {
@@ -277,7 +393,8 @@ select {
     background-color: #F2F2F2;
 }
 
-.pagination-current, .pagination-etc{
+.pagination-current,
+.pagination-etc {
     color: #000;
 }
 
@@ -291,7 +408,7 @@ select {
 }
 
 .subscribe-h2 {
-    color:#000;
+    color: #000;
 }
 
 .subscribe p {
