--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -55,6 +55,9 @@ body {
 .page-container{
     background-color: #FFFFFF;
 }
+
+/* HEADER */
+
 .main-header {
     align-content: center;
     padding: 0 70px;
@@ -131,7 +134,7 @@ ul.navigation {
     opacity: 0.5;
 }
 
-.want-there {
+.brown-button {
     font-weight: 700;
     font-size: 16px;
     line-height: 1.25em;
@@ -146,19 +149,19 @@ ul.navigation {
     cursor: pointer;
 }
 
-.want-there:focus, .want-there:hover {
+.brown-button:focus, .brown-button:hover {
     background-color: #615048;
 }
 
-.want-there:active {
+.brown-button:active {
     color: #FFFFFF4D;
 }
 
-.want-there:disabled {
+.brown-button:disabled {
     background: #E5E5E5;
 }
 
-/* subscribe section */
+/* SUBSCRIBE section */
 
 .subscribe {
     width: 684px;
@@ -186,12 +189,17 @@ ul.navigation {
     display: flex;
 }
 
-.email-subscribe {
+.subscribe-email {
     background-color: #F2F2F2;
     border-radius: 4px 0 0 4px;
     width: 452px;
     height: 50px;
     border: none;
+    padding-left: 20px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
 }
 
 .button-subscribe {
@@ -220,7 +228,8 @@ ul.navigation {
     cursor: pointer;
 }
 
-/* footer */
+/* FOOTER */
+
 .footer {
     display: flex;
 }
