feat: main page done

--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -115,8 +115,6 @@ input[type="radio"] {
     background: none;
     border: none;
     cursor: pointer;
-    width: 191px;
-    height: 36px;
     text-align: center;
     text-transform: uppercase;
     color: #FFFFFF;
@@ -126,13 +124,31 @@ input[type="radio"] {
     line-height: 20px;
 }
 
+.reset {
+    padding: 8px 57px;
+}
+
+.reset:hover {
+    color: #ffffff8D;
+}
+
+.reset:focus {
+    border: 3px solid #83B3D3;
+    border-radius: 4px;
+}
+
+.reset:active {
+    color: #FFFFFF4D;
+}
+
 .apply {
+    padding: 8px 50px;
     margin-bottom: 32px;
     background: #82B3D3;
     border-radius: 4px;
 }
 
-.apply:hover {
+.apply:hover, .apply:focus {
     background-color: #68A2CA;
 }
 
@@ -212,6 +228,7 @@ select {
 }
 
 .hotels-list {
+    display: flex;
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
@@ -241,6 +258,14 @@ select {
     font-weight: 700;
     font-size: 24px;
     line-height: 28px;
+}
+
+.hotel-about:hover, .hotel-item-h3:hover {
+    opacity: 0.8;
+}
+
+.hotel-about:active, .hotel-item-h3:active {
+    opacity: 0.6;
 }
 
 .name-and-price {
