--- a/styles/main.css
+++ b/styles/main.css
@@ -127,7 +127,7 @@
 }
 
 .advantage-list img {
-    margin-bottom: 27px;
+    margin-bottom: 25px;
 }
 
 .advantage-list-item p {
@@ -182,13 +182,14 @@
 }
 
 .hotel-search a {
+    font-family: 'PT Sans';
     font-style: normal;
     text-transform: uppercase;
     text-decoration: none;
     color: #FFFFFF;
     font-weight: 700;
     font-size: 20px;
-    line-height: 2em;
+    line-height: 36px;
     display: inline-block;
     background-color: #756157;
     padding: 8px 50px;
