--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -6,7 +6,7 @@ html {
     height: 100%;
 }
 
-/* here ara header, footer, subscribe section */
+/* here ara header, footer, subscribe section,  */
 
 /* header */
 @font-face {
@@ -37,23 +37,29 @@ html {
 }
 
 body {
-    margin: 0 auto;
-    min-height: 100%;
+    margin: 0;
+    height: 100%;
     font-family: 'PT Sans', sans-serif;
     font-weight: 400;
     font-size: 22px;
     line-height: 1.2em;
     color: #333333;
     background-color: #F2F2F2;
-    width: 1200px;
+    min-width: 1280px;
 }
 
 .main {
     flex-grow: 1;
 }
 
-.page-container{
+.page-container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    margin: 0 auto;
     background-color: #FFFFFF;
+    width: 1200px;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
 }
 
 /* HEADER */
@@ -70,7 +76,7 @@ body {
     align-content: center;
 }
 
-.navigation, .nav-buttons {
+.navigation, .button-nav-list {
     list-style: none;
     display: flex;
     margin: 0;
@@ -84,7 +90,7 @@ ul.navigation {
 .navigation-link {
     display: block;
     text-decoration: none;
-    font-family: 'PT Sans', sans-serif;
+    font-family: inherit;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.2em;
@@ -114,55 +120,40 @@ ul.navigation {
     color: #0000008D;
 }
 
-.nav-buttons {
+.button-nav-list {
     display: flex;
     align-items: center;
     width: 268px;
     height: 64px;
 }
-.search-button, .like-button {
-    padding: 20px 12px;
+.button-search, .button-like {
+    padding: 21px 12px;
     border: #FFFFFF;
     background-color: #FFFFFF;
     cursor: pointer;
 }
 
-.like-button {
+.button-like {
     margin-right: 20px;
 }
 
-.search-button:hover, .like-button:hover{
+.button-search:hover, .button-like:hover{
     opacity: 0.7;
 }
 
-.search-button:active, .like-button:active {
+.button-search:active, .button-like:active {
     opacity: 0.5;
 }
 
-.brown-button {
-    font-family: 'PT Sans';
+.button-want {
+    font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: 1.25em;
     text-transform: uppercase;
-    color: #FFFFFF;
     padding: 8px 34px;
     border-radius: 4px;
     border: none;
-    background-color: #756157;
-    cursor: pointer;
-}
-
-.brown-button:focus, .brown-button:hover {
-    background-color: #615048;
-}
-
-.brown-button:active {
-    color: #FFFFFF4D;
-}
-
-.brown-button:disabled {
-    background: #E5E5E5;
 }
 
 /* SUBSCRIBE section */
@@ -194,14 +185,13 @@ ul.navigation {
 }
 
 .subscribe-email {
-    font-family: 'PT Sans';
+    font-family: inherit;
     background-color: #F2F2F2;
     border-radius: 4px 0 0 4px;
     width: 452px;
     height: 50px;
     border: none;
     padding-left: 20px;
-    font-style: normal;
     font-weight: 400;
     font-size: 18px;
     line-height: 24px;
@@ -213,27 +203,13 @@ ul.navigation {
 }
 
 .button-subscribe {
-    background-color: #82B3D3;
     border-radius: 0 4px 4px 0;
     border: none;
     padding: 8px 50px;
-    font-family: 'PT Sans';
-    font-style: normal;
+    font-family: inherit;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 20px;
-    color:#FFFFFF;
-}
-
-.button-subscribe:hover {
-    background-color: #68A2CA;
-    cursor: pointer;
-}
-
-.button-subscribe:active {
-    color: #FFFFFF4D;
-    background-color: #82B3D3;
-    cursor: pointer;
 }
 
 .subscribe-email:active,
@@ -312,4 +288,44 @@ ul.navigation {
 
 .htmlacademy:active path{
     fill: #7561574D;
+}
+
+
+/* BUTTONS */
+
+/* BROWN BUTTON */
+.button-brown {
+    background-color: #756157;
+    color:#FFFFFF;
+    cursor: pointer;
+}
+
+.button-brown:focus, .button-brown:hover {
+    background-color: #615048;
+}
+
+.button-brown:active {
+    color: #FFFFFF4D;
+}
+
+.button-brown:disabled,
+.button-blue:disabled {
+    background: #E5E5E5;
+}
+
+/* BLUE BUTTON */
+.button-blue {
+    background-color: #82B3D3;
+    color:#FFFFFF;
+    cursor: pointer;
+}
+
+.button-blue:hover:not(.pagination-current, .pagination-etc),
+.button-blue:focus:not(.pagination-current, .pagination-etc) {
+    background-color: #68A2CA;
+}
+
+.button-blue:active:not(.pagination-current, .pagination-etc) {
+    color: #FFFFFF4D;
+    background-color: #82B3D3;
 }
