--- a/styles/main.css
+++ b/styles/main.css
@@ -127,7 +127,7 @@
 }
 
 .advantage-list img {
-    margin-bottom: 25px;
+    margin-bottom: 27px;
 }
 
 .advantage-list-item p {
@@ -186,26 +186,12 @@
     font-style: normal;
     text-transform: uppercase;
     text-decoration: none;
-    color: #FFFFFF;
     font-weight: 700;
     font-size: 20px;
-    line-height: 36px;
+    line-height: 2em;
     display: inline-block;
-    background-color: #756157;
     padding: 8px 50px;
     border-radius: 4px;
-}
-
-.hotel-search a:focus, .hotel-search a:hover {
-    background-color: #615048;
-}
-
-.hotel-search a:active {
-    color: #FFFFFF4D;
-}
-
-.hotel-search a:disabled {
-    background: #E5E5E5;
 }
 
 .subscribe {
