--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -229,7 +229,7 @@ input[type="radio"] {
 .hotel-item {
     display: grid;
     grid-template-columns: repeat(2, 140px);
-    grid-template-rows: 256px 21px 36px 37px;
+    grid-template-rows: minmax(256px, min-content) 21px minmax(36px, min-content) 37px;
     column-gap: 20px;
     row-gap: 16px;
     padding: 19px;
@@ -248,6 +248,7 @@ input[type="radio"] {
 }
 
 .hotel-item img {
+    object-fit: cover;
     margin-bottom: 16px;
 }
 
