--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -6,6 +6,7 @@
 
 html {
     height: 100%;
+    scroll-behavior: smooth;
 }
 
 /* here ara header, footer, subscribe section,  */
@@ -161,7 +162,6 @@ ul.navigation {
     margin: 11px 0 0 20px;
     padding: 5px;
     font-family: inherit;
-    font-style: normal;
     font-weight: 400;
     font-size: 10px;
     line-height: 10px;
@@ -225,7 +225,6 @@ ul.navigation {
 .subscribe-email:hover,
 .subscribe-email:focus {
     background-color: #E6E6E6;
-    ;
 }
 
 .button-subscribe {
@@ -326,6 +325,7 @@ ul.navigation {
     background-color: #756157;
     color: #FFFFFF;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 .button-brown:focus,
@@ -347,6 +347,7 @@ ul.navigation {
     background-color: #82B3D3;
     color: #FFFFFF;
     cursor: pointer;
+    transition: background-color 0.3s;
 }
 
 .button-blue:hover:not(.pagination-current, .pagination-etc),
