--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -1,6 +1,7 @@
 *,
 *::after,
 *::before {
+    -webkit-box-sizing: border-box;
     box-sizing: border-box;
 }
 
@@ -53,11 +54,18 @@ body {
 }
 
 .main {
+    -webkit-box-flex: 1;
+    -ms-flex-positive: 1;
     flex-grow: 1;
 }
 
 .page-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
     min-height: 100%;
     margin: 0 auto;
@@ -75,14 +83,19 @@ body {
 }
 
 .all-navigation {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
     align-content: center;
 }
 
 .navigation,
 .button-nav-list {
     list-style: none;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 0;
     padding: 0;
@@ -127,6 +140,8 @@ ul.navigation {
 }
 
 .button-nav-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     align-items: center;
     width: 268px;
@@ -206,6 +221,8 @@ ul.navigation {
 }
 
 .subscribe-form {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
@@ -222,11 +239,6 @@ ul.navigation {
     line-height: 24px;
 }
 
-.subscribe-email:hover,
-.subscribe-email:focus {
-    background-color: #E6E6E6;
-}
-
 .button-subscribe {
     border-radius: 0 4px 4px 0;
     border: none;
@@ -240,6 +252,7 @@ ul.navigation {
 .subscribe-email:active,
 .subscribe-email:hover,
 .subscribe-email:focus {
+    background-color: #E6E6E6;
     outline: 0;
     outline-offset: 0;
 }
@@ -247,10 +260,14 @@ ul.navigation {
 /* FOOTER */
 
 .footer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 
 .footer-container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     width: 1060px;
     height: 50px;
@@ -258,6 +275,8 @@ ul.navigation {
 }
 
 .social-list {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     list-style: none;
     padding: 0;
@@ -325,11 +344,11 @@ ul.navigation {
     background-color: #756157;
     color: #FFFFFF;
     cursor: pointer;
+    -webkit-transition: background-color 0.3s;
     transition: background-color 0.3s;
 }
-
-.button-brown:focus,
-.button-brown:hover {
+.button-brown:hover,
+.button-brown:focus {
     background-color: #615048;
 }
 
@@ -347,6 +366,7 @@ ul.navigation {
     background-color: #82B3D3;
     color: #FFFFFF;
     cursor: pointer;
+    -webkit-transition: background-color 0.3s;
     transition: background-color 0.3s;
 }
 
