--- a/styles/common-style.css
+++ b/styles/common-style.css
@@ -379,3 +379,248 @@ ul.navigation {
     color: #FFFFFF4D;
     background-color: #82B3D3;
 }
+
+
+/* MODAL */
+
+.modal-container {
+    position: fixed;
+    display: flex;
+    background-color: #F2F2F2CC;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    z-index: 2;
+}
+
+.modal {
+    position: relative;
+    margin: auto;
+    background-color: #FFFFFF;
+    box-shadow: 0 25px 50px rgba(0, 0, 0, 0.15);
+    border-radius: 30px;
+    padding: 64px 70px;
+}
+
+.modal h2 {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 36px;
+    text-transform: uppercase;
+    color: #000000;
+    margin: 0 131px 64px 0;
+}
+
+.modal h4 {
+    margin: 0;
+    text-transform: capitalize;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+    color: #000000;
+}
+
+.modal-content-warn {
+    display: block;
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 21px;
+    margin: 0 0 23px 137px;
+    padding: 0 20px;
+}
+
+.warn-red {
+    color: #FF5757;
+}
+
+.modal-content {
+    width: 577px;
+}
+
+.modal-searh {
+    display: flex;
+}
+
+.button-close {
+    position: absolute;
+    right: 52px;
+    background-color: #F2F2F2;
+    border: none;
+    border-radius: 50%;
+    cursor: pointer;
+    width: 53px;
+    height: 53px;
+}
+
+.button-close-img {
+    padding: 17px;
+}
+
+.button-close-img:hover {
+    background-color: #E6E6E6;
+}
+
+.button-close-img:focus {
+    background-color: #E6E6E6;
+    border: 3px solid #83B3D3;
+}
+
+.button-close-img:active {
+    background-color: #E6E6E6;
+}
+
+.modal-content-h4 {
+    display: inline-block;
+}
+
+.modal-content-arrival h4 {
+    margin-right: 24px;
+}
+
+.modal-content-departure h4 {
+    margin-right: 18px;
+}
+
+.modal-content-adult h4, .modal-content-info {
+    margin: auto 0;
+}
+
+.modal-content-adult, .modal-content-child{
+    display: flex;
+}
+.modal-content-arrival, .modal-content-departure {
+    margin-bottom: 4px;
+}
+
+.modal-content-child h4 {
+    margin-right: 10px;
+    margin: auto 10px auto 0;
+}
+
+.modal-content-people{
+    margin-bottom: 48px;
+    display: flex;
+}
+
+.modal-content-child {
+    margin-left: 88px;
+}
+
+.field {
+    font-family: inherit;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 24px;
+    color:#000;
+    border: none;
+    background-color: #F2F2F2;
+    outline: 0;
+    outline-offset: 0;
+}
+
+.field-data:hover,
+.field-data:active {
+    background-color: #E6E6E6;
+}
+
+.field-data:focus {
+    border: 3px solid #83B3D3;
+    background-color: #E6E6E6;
+}
+
+.field-data {
+    width: 430px;
+    padding: 12px 20px;
+    border-radius: 4px;
+    background-image: url("../img/icons/calendar.svg");
+    background-repeat: no-repeat;
+    background-position: 400px 14px;
+}
+
+.field-number {
+    width: 31px;
+    height: 48px;
+    text-align: center;
+}
+
+.button-modal-content {
+    font-family: inherit;
+    border: none;
+    padding: 18px 256px;
+    text-transform: uppercase;
+    border-radius: 10px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 24px;
+}
+
+.button-minus {
+    border: none;
+    background-color: #F2F2F2;
+    border-radius: 4px 0 0 4px;
+    width: 40px;
+    height: 48px;
+    padding-bottom: 10px;
+}
+
+.button-number {
+    display: flex;
+    margin-left: 46px;
+}
+
+.button-plus {
+    border: none;
+    background-color: #F2F2F2;
+    border-radius: 0 4px 4px 0;
+    width: 40px;
+    height: 48px;
+}
+
+.button-number ~ .button-number-path:hover {
+    fill: #000000;
+}
+
+.modal-content-info {
+    position: relative;
+    border: none;
+    color: #FFFFFF;
+    background-color: #82B3D3;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 20px;
+    width: 26px;
+    height: 26px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.modal-content-info:hover::after {
+    content: attr(data-title);
+    position: absolute;
+    background-color: #333333;
+    width: 216px;
+    padding: 15px 18px 18px 22px;
+    box-shadow: 0 15px 30px rgba(0, 0, 0, 0.3);
+    border-radius: 10px;
+    z-index: 1;
+}
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    -moz-appearance:textfield;
+}
+
+.modal-container-close {
+    display: none;
+}
