--- a/styles/catalog.css
+++ b/styles/catalog.css
@@ -20,7 +20,7 @@
 .filter h1 {
     font-weight: 700;
     font-size: 60px;
-    line-height: 1.3em;
+    line-height: 1.2em;
     padding: 0;
     margin: 0;
     margin-bottom: 8px;
@@ -64,7 +64,7 @@
 
 .filter-form:nth-child(2) {
     width: 151px;
-    margin-right: 100px;
+    margin-right: 151px;
 }
 
 .filter-form-name{
@@ -162,7 +162,9 @@
 }
 
 /* CHECKBOX, RADIO END */
-
+.cost {
+    margin-bottom: 10px;
+}
 
 /* PRICE FORM START */
 .filter-form legend {
@@ -175,15 +177,12 @@
 }
 
 .price-form {
-    display: inline-block;
-    justify-content: space-between;
+    display: inline;
     font-family: inherit;
     color: #5e5a594d;
     margin: 0;
     background-color: #F2F2F2;
-    padding: 12px 20px;
-    height: 48px;
-    margin-bottom: 36px;
+    padding: 9px 19px 11px;
 }
 
 .price-form-field {
@@ -198,6 +197,13 @@
     outline-offset: 0;
 }
 
+.price-form-name {
+    font-family: inherit;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 24px;
+}
+
 .price-form:hover, .price-form:active,
 .price-form-field:hover, .price-form-field:active {
     background-color: #E6E6E6;
@@ -209,11 +215,13 @@
 }
 
 .price-form-one {
+    display: inline-block;
     border-radius: 4px 0 0 4px;
     margin-right: 2px;
 }
 
 .price-form-two {
+    display: inline-block;
     border-radius: 0 4px 4px 0;
 }
 
@@ -224,71 +232,40 @@
     margin-right: 70px;
 }
 
-
-.slider {
-    display: flex;
-    margin: 0;
-    width: 287px;
-    height: 20px;
-}
-
-input[type="range"] {
-    -webkit-appearance: none;
-    appearance: none;
-    background: transparent;
-    cursor: pointer;
+/* RANGE */
+.range-scale {
+    display: block;
+    margin-top: 55px;
+    position: relative;
+    height: 4px;
+    background-color: #ffffff25;
     width: 287px;
 }
 
-input[type="range"]:focus,
-input[type="range"]:active{
-border: 0;
-outline: none;
-}
-/***** Стили дорожки *****/
-/***** Chrome, Safari, Opera и Edge Chromium *****/
-input[type="range"]::-webkit-slider-runnable-track {
-    background: #FFF;
+.range-bar {
     height: 4px;
-}
-
-  /******** Firefox ********/
-input[type="range"]::-moz-range-track {
-    background: #FFF;
-    height: 4px;
-}
-
-/***** Стили ползунка *****/
-/***** Chrome, Safari, Opera и Edge Chromium *****/
-input[type="range"]::-webkit-slider-thumb {
-    -webkit-appearance: none; /* Сбрасываем вид по умолчанию */
-    appearance: none;
-    margin-top: -8px; /* Центрируем ползунок на дорожке */
-    margin-left: 82px;
+    width: 226px;
     background-color: #FFF;
-    width: 20px;
-    height: 20px;
-    border-radius: 4px;
 }
 
-.slider-min {
+.range-toggle {
     position: absolute;
-    background-color: #FFF;
     width: 20px;
     height: 20px;
+    background-color: #FFF;
+    border: none;
     border-radius: 4px;
-    margin-top: 90px;
+    cursor: pointer;
+    top: -8px;
 }
 
-/***** Стили нажатие *****/
-  /***** Chrome, Safari, Opera и Edge Chromium *****/
-input[type="range"]:active::-webkit-slider-thumb {
-    border: 1.5px solid #3F5E72;
+.toggle-max {
+    margin-left: 208px;
 }
 
-  /******** Firefox ********/
-input[type="range"]:active::-moz-range-thumb {
-    border: 1.5px solid #3F5E72;
+.range-toggle:active,
+.range-toggle:focus {
+    border: 3px solid #83B3D3;
 }
 
 /* Chrome, Safari, Edge, Opera */
@@ -382,21 +359,32 @@ input[type=number] {
 
 
 /* rewrite */
-.select-control {
-    font-family: inherit;
+.select-container {
+    position: relative;
+    display: flex;
+    align-items: center;
     width: 292px;
     height: 49px;
+}
+
+  /* Control */
+.select-control {
+    width: 100%;
+    padding: 14px 20px;
+    margin-right: 107px;
+    font: inherit;
+    color: #333333;
     font-weight: 400;
     font-size: 18px;
     line-height: 21px;
-    color: #333333;
-    cursor: pointer;
+    background-color: #ffffff;
     border: 2px solid #E5E5E5;
     border-radius: 4px;
     background-image: url("../img/icons/filterArrow.svg");
     background-repeat: no-repeat;
-    background-size: 12px 7px;
     background-position: center right 20px;
+    appearance: none;
+    cursor: pointer;
 }
 /* rewrite */
 
